--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start": "node ."
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "socket.io-server": "^1.0.0-b"
+    "socket.io": "^4.1.2"
   }
 }
