--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,14 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ."
+    "start": "nodemon ."
   },
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "socket.io": "^4.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
