--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,12 @@
 {
   "name": "scwab-server",
   "version": "0.0.1",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon ."
+    "start": "node .",
+    "dev": "tsnd src/index.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
@@ -12,6 +14,9 @@
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "@types/socket.io": "^3.0.2",
+    "nodemon": "^2.0.7",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.3.4"
   }
 }
